[package]
name = "bluefile"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
description = "Experimental Rust library for handling X-Midas Bluefiles."
homepage = "https://github.com/spectriclabs/bluefile"
repository = "https://github.com/spectriclabs/bluefile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
