[package]
name = "bluefile"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Experimental Rust library for handling X-Midas Bluefiles."
homepage = "https://github.com/spectriclabs/bluefile"
repository = "https://github.com/spectriclabs/bluefile"

[dependencies]
num = "0.4"

[lib]
name = "bluefile"
path = "src/lib.rs"

[[bin]]
name = "bluestat"
path = "src/bluestat.rs"
